<resources>
    <string name="app_name">Kakulator</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="res">=</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minus">-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="plus">+</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="div">/</string>
    <string name="percent">%</string>
    <string name="del_all">del</string>
    <string name="del">←</string>
    <string name="mul">*</string>
</resources>
